// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Layouts/Resizable Card Layout Card resize in horizontal and vertical directions 1`] = `
<div
  class="fd-resizable-card-layout"
  id="grid1"
>
  
        
  <div
    class="fd-resizable-card-layout__item fd-resizable-card-layout__indication-border"
    id="seven"
  >
    
            
    <div
      class="fd-resizable-card-layout__resize--vertical"
    />
    
            
    <div
      class="fd-resizable-card-layout__card"
    >
      
                
      <div
        aria-label="List Card Example 4"
        class="fd-card"
        role="region"
      >
        
                    
        <a
          class="fd-card__header"
          tabindex="0"
        >
          
                        
          <div
            class="fd-card__header-text"
          >
            
                            
            <div
              class="fd-card__title-area"
            >
              
                                
              <div
                class="fd-card__title"
              >
                Quick Links
              </div>
              
                                
              <span
                class="fd-object-status fd-card__counter"
              >
                4 of 20
              </span>
              
                            
            </div>
            
                        
          </div>
          
                    
        </a>
        
                    
        <div
          aria-label="Card Content"
          class="fd-card__content"
          role="group"
        >
          
                        
          <ul
            class="fd-list fd-list--no-border"
            role="list"
          >
            
                            
            <li
              class="fd-list__item"
              role="listitem"
              tabindex="0"
            >
              
                                
              <i
                class="fd-list__icon sap-icon--cart"
                role="presentation"
              />
              
                                
              <span
                class="fd-list__title"
              >
                List item 1
              </span>
              
                            
            </li>
            
                            
            <li
              class="fd-list__item"
              role="listitem"
              tabindex="0"
            >
              
                                
              <i
                class="fd-list__icon sap-icon--wrench"
                role="presentation"
              />
              
                                
              <span
                class="fd-list__title"
              >
                List item 2
              </span>
              
                            
            </li>
            
                            
            <li
              class="fd-list__item"
              role="listitem"
              tabindex="0"
            >
              
                                
              <i
                class="fd-list__icon sap-icon--leads"
                role="presentation"
              />
              
                                
              <span
                class="fd-list__title"
              >
                List item 3
              </span>
              
                            
            </li>
            
                            
            <li
              class="fd-list__item"
              role="listitem"
              tabindex="0"
            >
              
                                
              <i
                class="fd-list__icon sap-icon--batch-payments"
                role="presentation"
              />
              
                                
              <span
                class="fd-list__title"
              >
                List item 4
              </span>
              
                            
            </li>
            
                        
          </ul>
          
                    
        </div>
        
                
      </div>
      
                
      <div
        class="fd-resizable-card-layout__icon-wrapper"
      >
        
                    
        <div
          class="fd-resizable-card-layout__icon"
        />
        
                
      </div>
      
            
    </div>
    
            
    <div
      class="fd-resizable-card-layout__resize--horizontal"
    />
    
        
  </div>
  
    
</div>
`;

exports[`Storyshots Layouts/Resizable Card Layout Card resize in horizontal directions 1`] = `
<div
  class="fd-resizable-card-layout"
  id="grid1"
>
  
        
  <div
    class="fd-resizable-card-layout__item"
    id="eight"
  >
    
            
    <div
      class="fd-resizable-card-layout__resize--vertical"
    />
    
            
    <div
      class="fd-resizable-card-layout__card"
    >
      
                
      <div
        aria-label="List Card Example 5"
        class="fd-card"
        role="region"
      >
        
                    
        <a
          class="fd-card__header"
          tabindex="0"
        >
          
                        
          <div
            class="fd-card__header-text"
          >
            
                            
            <div
              class="fd-card__title-area"
            >
              
                                
              <div
                class="fd-card__title"
              >
                Quick Links
              </div>
              
                                
              <span
                class="fd-object-status fd-card__counter"
              >
                4 of 20
              </span>
              
                            
            </div>
            
                        
          </div>
          
                    
        </a>
        
                    
        <div
          aria-label="Card Content"
          class="fd-card__content"
          role="group"
        >
          
                        
          <ul
            class="fd-list fd-list--no-border"
            role="list"
          >
            
                            
            <li
              class="fd-list__item"
              role="listitem"
              tabindex="0"
            >
              
                                
              <i
                class="fd-list__icon sap-icon--cart"
                role="presentation"
              />
              
                                
              <span
                class="fd-list__title"
              >
                List item 1
              </span>
              
                            
            </li>
            
                            
            <li
              class="fd-list__item"
              role="listitem"
              tabindex="0"
            >
              
                                
              <i
                class="fd-list__icon sap-icon--wrench"
                role="presentation"
              />
              
                                
              <span
                class="fd-list__title"
              >
                List item 2
              </span>
              
                            
            </li>
            
                            
            <li
              class="fd-list__item"
              role="listitem"
              tabindex="0"
            >
              
                                
              <i
                class="fd-list__icon sap-icon--leads"
                role="presentation"
              />
              
                                
              <span
                class="fd-list__title"
              >
                List item 3
              </span>
              
                            
            </li>
            
                            
            <li
              class="fd-list__item"
              role="listitem"
              tabindex="0"
            >
              
                                
              <i
                class="fd-list__icon sap-icon--batch-payments"
                role="presentation"
              />
              
                                
              <span
                class="fd-list__title"
              >
                List item 4
              </span>
              
                            
            </li>
            
                        
          </ul>
          
                    
        </div>
        
                
      </div>
      
                
      <div
        class="fd-resizable-card-layout__icon-wrapper"
      >
        
                    
        <div
          class="fd-resizable-card-layout__icon fd-resizable-card-layout__icon--horizontal"
        />
        
                
      </div>
      
            
    </div>
    
        
  </div>
  
    
</div>
`;

exports[`Storyshots Layouts/Resizable Card Layout Card resize in vertical directions 1`] = `
<div
  class="fd-resizable-card-layout"
  id="grid1"
>
  
        
  <div
    class="fd-resizable-card-layout__item"
    id="nine"
  >
    
            
    <div
      class="fd-resizable-card-layout__card"
    >
      
                
      <div
        aria-label="List Card Example 6"
        class="fd-card"
        role="region"
      >
        
                    
        <a
          class="fd-card__header"
          tabindex="0"
        >
          
                        
          <div
            class="fd-card__header-text"
          >
            
                            
            <div
              class="fd-card__title-area"
            >
              
                                
              <div
                class="fd-card__title"
              >
                Quick Links
              </div>
              
                                
              <span
                class="fd-object-status fd-card__counter"
              >
                4 of 20
              </span>
              
                            
            </div>
            
                        
          </div>
          
                    
        </a>
        
                    
        <div
          aria-label="Card Content"
          class="fd-card__content"
          role="group"
        >
          
                        
          <ul
            class="fd-list fd-list--no-border"
            role="list"
          >
            
                            
            <li
              class="fd-list__item"
              role="listitem"
              tabindex="0"
            >
              
                                
              <i
                class="fd-list__icon sap-icon--cart"
                role="presentation"
              />
              
                                
              <span
                class="fd-list__title"
              >
                List item 1
              </span>
              
                            
            </li>
            
                            
            <li
              class="fd-list__item"
              role="listitem"
              tabindex="0"
            >
              
                                
              <i
                class="fd-list__icon sap-icon--wrench"
                role="presentation"
              />
              
                                
              <span
                class="fd-list__title"
              >
                List item 2
              </span>
              
                            
            </li>
            
                            
            <li
              class="fd-list__item"
              role="listitem"
              tabindex="0"
            >
              
                                
              <i
                class="fd-list__icon sap-icon--leads"
                role="presentation"
              />
              
                                
              <span
                class="fd-list__title"
              >
                List item 3
              </span>
              
                            
            </li>
            
                            
            <li
              class="fd-list__item"
              role="listitem"
              tabindex="0"
            >
              
                                
              <i
                class="fd-list__icon sap-icon--batch-payments"
                role="presentation"
              />
              
                                
              <span
                class="fd-list__title"
              >
                List item 4
              </span>
              
                            
            </li>
            
                        
          </ul>
          
                    
        </div>
        
                
      </div>
      
                
      <div
        class="fd-resizable-card-layout__icon-wrapper"
      >
        
                    
        <div
          class="fd-resizable-card-layout__icon fd-resizable-card-layout__icon--vertical"
        />
        
                
      </div>
      
            
    </div>
    
            
    <div
      class="fd-resizable-card-layout__resize--horizontal"
    />
    
        
  </div>
  
    
</div>
`;

exports[`Storyshots Layouts/Resizable Card Layout Resizable card layout 1`] = `
<div
  class="fd-resizable-card-layout fd-resizable-card-layout--md fd-custom-resizable-card-layout-flex"
  id="layout1"
>
  
        
  <div
    class="fd-resizable-card-layout__item card-one-dimensions"
    id="one"
  >
    
            
    <div
      class="fd-resizable-card-layout__resize--vertical"
    />
    
            
    <div
      class="fd-resizable-card-layout__card"
    >
      
                
      <div
        aria-label="List Card Example 1"
        class="fd-card"
        role="region"
      >
        
                    
        <a
          class="fd-card__header"
          tabindex="0"
        >
          
                        
          <div
            class="fd-card__header-text"
          >
            
                            
            <div
              class="fd-card__title-area"
            >
              
                                
              <div
                class="fd-card__title"
              >
                Quick Links
              </div>
              
                                
              <span
                class="fd-object-status fd-card__counter"
              >
                4 of 20
              </span>
              
                            
            </div>
            
                        
          </div>
          
                    
        </a>
        
                    
        <div
          aria-label="Card Content"
          class="fd-card__content"
          role="group"
        >
          
                        
          <ul
            class="fd-list fd-list--no-border"
            role="list"
          >
            
                            
            <li
              class="fd-list__item"
              role="listitem"
              tabindex="0"
            >
              
                                
              <i
                class="fd-list__icon sap-icon--cart"
                role="presentation"
              />
              
                                
              <span
                class="fd-list__title"
              >
                List item 1
              </span>
              
                            
            </li>
            
                            
            <li
              class="fd-list__item"
              role="listitem"
              tabindex="0"
            >
              
                                
              <i
                class="fd-list__icon sap-icon--wrench"
                role="presentation"
              />
              
                                
              <span
                class="fd-list__title"
              >
                List item 2
              </span>
              
                            
            </li>
            
                            
            <li
              class="fd-list__item"
              role="listitem"
              tabindex="0"
            >
              
                                
              <i
                class="fd-list__icon sap-icon--leads"
                role="presentation"
              />
              
                                
              <span
                class="fd-list__title"
              >
                List item 3
              </span>
              
                            
            </li>
            
                            
            <li
              class="fd-list__item"
              role="listitem"
              tabindex="0"
            >
              
                                
              <i
                class="fd-list__icon sap-icon--batch-payments"
                role="presentation"
              />
              
                                
              <span
                class="fd-list__title"
              >
                List item 4
              </span>
              
                            
            </li>
            
                        
          </ul>
          
                    
        </div>
        
                
      </div>
      
                
      <div
        class="fd-resizable-card-layout__icon-wrapper"
      >
        
                    
        <div
          class="fd-resizable-card-layout__icon"
        />
        
                
      </div>
      
            
    </div>
    
            
    <div
      class="fd-resizable-card-layout__resize--horizontal"
    />
    
        
  </div>
  

        
  <div
    class="fd-resizable-card-layout__item card-two-dimensions"
    id="two"
  >
    
            
    <div
      class="fd-resizable-card-layout__resize--vertical"
    />
    
            
    <div
      class="fd-resizable-card-layout__card"
    >
      
                
      <div
        aria-label="Card Anatomy Example 1"
        class="fd-card"
        role="region"
      >
        
                    
        <a
          class="fd-card__header"
          tabindex="0"
        >
          
                        
          <span
            class="fd-avatar fd-avatar--s fd-avatar--circle fd-avatar--thumbnail fd-card__avatar"
            role="presentation"
            style="background-image: url('/assets/images/backgrounds/city.jpg')"
          />
          
                        
          <div
            class="fd-card__header-text"
          >
            
                            
            <div
              class="fd-card__title-area"
            >
              
                                
              <div
                class="fd-card__title"
              >
                Card Title
              </div>
              
                                
              <span
                class="fd-object-status fd-card__counter"
              >
                Counter
              </span>
              
                            
            </div>
            
                            
            <div
              class="fd-card__subtitle-area"
            >
              
                                
              <div
                class="fd-card__subtitle"
              >
                Card Subtitle
              </div>
              
                            
            </div>
            
                        
          </div>
          
                    
        </a>
        
                    
        <div
          aria-label="Card Content"
          class="fd-card__content"
          role="group"
        />
        
                
      </div>
      
                
      <div
        class="fd-resizable-card-layout__icon-wrapper"
      >
        
                    
        <div
          class="fd-resizable-card-layout__icon"
        />
        
                
      </div>
      
            
    </div>
    
            
    <div
      class="fd-resizable-card-layout__resize--horizontal"
    />
    
        
  </div>
  

        
  <div
    class="fd-resizable-card-layout__item card-three-dimensions"
    id="three"
  >
    
            
    <div
      class="fd-resizable-card-layout__resize--vertical"
    />
    
            
    <div
      class="fd-resizable-card-layout__card"
    >
      
                
      <div
        aria-label="List Card Example 2"
        class="fd-card"
        role="region"
      >
        
                    
        <a
          class="fd-card__header"
          tabindex="0"
        >
          
                        
          <div
            class="fd-card__header-text"
          >
            
                            
            <div
              class="fd-card__title-area"
            >
              
                                
              <div
                class="fd-card__title"
              >
                Quick Links
              </div>
              
                                
              <span
                class="fd-object-status fd-card__counter"
              >
                4 of 20
              </span>
              
                            
            </div>
            
                        
          </div>
          
                    
        </a>
        
                    
        <div
          aria-label="Card Content"
          class="fd-card__content"
          role="group"
        >
          
                        
          <ul
            class="fd-list fd-list--no-border"
            role="list"
          >
            
                            
            <li
              class="fd-list__item"
              role="listitem"
              tabindex="0"
            >
              
                                
              <i
                class="fd-list__icon sap-icon--cart"
                role="presentation"
              />
              
                                
              <span
                class="fd-list__title"
              >
                List item 1
              </span>
              
                            
            </li>
            
                            
            <li
              class="fd-list__item"
              role="listitem"
              tabindex="0"
            >
              
                                
              <i
                class="fd-list__icon sap-icon--wrench"
                role="presentation"
              />
              
                                
              <span
                class="fd-list__title"
              >
                List item 2
              </span>
              
                            
            </li>
            
                            
            <li
              class="fd-list__item"
              role="listitem"
              tabindex="0"
            >
              
                                
              <i
                class="fd-list__icon sap-icon--leads"
                role="presentation"
              />
              
                                
              <span
                class="fd-list__title"
              >
                List item 3
              </span>
              
                            
            </li>
            
                            
            <li
              class="fd-list__item"
              role="listitem"
              tabindex="0"
            >
              
                                
              <i
                class="fd-list__icon sap-icon--batch-payments"
                role="presentation"
              />
              
                                
              <span
                class="fd-list__title"
              >
                List item 4
              </span>
              
                            
            </li>
            
                            
            <li
              class="fd-list__item"
              role="listitem"
              tabindex="0"
            >
              
                                
              <i
                class="fd-list__icon sap-icon--leads"
                role="presentation"
              />
              
                                
              <span
                class="fd-list__title"
              >
                List item 5
              </span>
              
                            
            </li>
            
                        
          </ul>
          
                    
        </div>
        
                
      </div>
      
                
      <div
        class="fd-resizable-card-layout__icon-wrapper"
      >
        
                    
        <div
          class="fd-resizable-card-layout__icon"
        />
        
                
      </div>
      
            
    </div>
    
            
    <div
      class="fd-resizable-card-layout__resize--horizontal"
    />
    
        
  </div>
  

        
  <div
    class="fd-resizable-card-layout__item card-six-dimensions"
    id="six"
  >
    
            
    <div
      class="fd-resizable-card-layout__resize--vertical"
    />
    
            
    <div
      class="fd-resizable-card-layout__card"
    >
      
                
      <div
        aria-label="List Card Example 3"
        class="fd-card"
        role="region"
      >
        
                    
        <a
          class="fd-card__header"
          tabindex="0"
        >
          
                        
          <div
            class="fd-card__header-text"
          >
            
                            
            <div
              class="fd-card__title-area"
            >
              
                                
              <div
                class="fd-card__title"
              >
                Quick Links
              </div>
              
                                
              <span
                class="fd-object-status fd-card__counter"
              >
                4 of 20
              </span>
              
                            
            </div>
            
                        
          </div>
          
                    
        </a>
        
                    
        <div
          aria-label="Card Content"
          class="fd-card__content"
          role="group"
        >
          
                        
          <ul
            class="fd-list fd-list--no-border"
            role="list"
          >
            
                            
            <li
              class="fd-list__item"
              role="listitem"
              tabindex="0"
            >
              
                                
              <i
                class="fd-list__icon sap-icon--cart"
                role="presentation"
              />
              
                                
              <span
                class="fd-list__title"
              >
                List item 1
              </span>
              
                            
            </li>
            
                            
            <li
              class="fd-list__item"
              role="listitem"
              tabindex="0"
            >
              
                                
              <i
                class="fd-list__icon sap-icon--wrench"
                role="presentation"
              />
              
                                
              <span
                class="fd-list__title"
              >
                List item 2
              </span>
              
                            
            </li>
            
                            
            <li
              class="fd-list__item"
              role="listitem"
              tabindex="0"
            >
              
                                
              <i
                class="fd-list__icon sap-icon--leads"
                role="presentation"
              />
              
                                
              <span
                class="fd-list__title"
              >
                List item 3
              </span>
              
                            
            </li>
            
                            
            <li
              class="fd-list__item"
              role="listitem"
              tabindex="0"
            >
              
                                
              <i
                class="fd-list__icon sap-icon--batch-payments"
                role="presentation"
              />
              
                                
              <span
                class="fd-list__title"
              >
                List item 4
              </span>
              
                            
            </li>
            
                        
          </ul>
          
                    
        </div>
        
                
      </div>
      
                
      <div
        class="fd-resizable-card-layout__icon-wrapper"
      >
        
                    
        <div
          class="fd-resizable-card-layout__icon"
        />
        
                
      </div>
      
            
    </div>
    
            
    <div
      class="fd-resizable-card-layout__resize--horizontal"
    />
    
        
  </div>
  

        
  <div
    class="fd-resizable-card-layout__item card-four-dimensions"
    id="four"
  >
    
            
    <div
      class="fd-resizable-card-layout__resize--vertical"
    />
    
            
    <div
      class="fd-resizable-card-layout__card"
    >
      
                
      <div
        aria-label="Object Card Example 1"
        class="fd-card fd-card--object"
        role="region"
      >
        
                    
        <a
          class="fd-card__header"
          tabindex="0"
        >
          
                        
          <span
            aria-label="John Doe"
            class="fd-avatar fd-avatar--s fd-avatar--circle fd-avatar--thumbnail fd-card__avatar"
            role="img"
            style="background-image: url('/assets/images/avatars/1.svg')"
          />
          
                        
          <div
            class="fd-card__header-text"
          >
            
                        
            <div
              class="fd-card__title-area"
            >
              
                            
              <div
                class="fd-card__title"
              >
                Card Title
              </div>
              
                        
            </div>
            
                        
            <div
              class="fd-card__subtitle-area"
            >
              
                            
              <div
                class="fd-card__subtitle"
              >
                Card Subtitle
              </div>
              
                        
            </div>
            
                        
          </div>
          
                    
        </a>
        
                    
        <div
          aria-label="Card Content"
          class="fd-card__content"
          role="group"
        >
          
                        
          <div
            class="fd-card__content-container"
          >
            
                        
            <div
              class="fd-card__content-section"
            >
              
                            
              <div
                class="fd-card__content-title-container"
              >
                Group Title 1
              </div>
              
                            
              <div
                class="fd-card__content-group"
              >
                
                            
                <div
                  class="fd-card__content-group-text"
                >
                  
                                
                  <span>
                    Label
                  </span>
                  
                                
                  <span>
                    Text
                  </span>
                  
                            
                </div>
                
                            
              </div>
              
                            
              <div
                class="fd-card__content-group"
              >
                
                            
                <div
                  class="fd-card__content-group-text"
                >
                  
                                
                  <span>
                    Label
                  </span>
                  
                                
                  <span>
                    Text
                  </span>
                  
                            
                </div>
                
                            
              </div>
              
                            
              <div
                class="fd-card__content-group"
              >
                
                            
                <div
                  class="fd-card__content-group-text"
                >
                  
                                
                  <span>
                    Label
                  </span>
                  
                                
                  <span>
                    Text
                  </span>
                  
                            
                </div>
                
                            
              </div>
              
                        
            </div>
            
                        
            <div
              class="fd-card__content-section"
            >
              
                            
              <div
                class="fd-card__content-title-container"
              >
                Group Title 2
              </div>
              
                            
              <div
                class="fd-card__content-group"
              >
                
                            
                <div
                  class="fd-card__content-group-text"
                >
                  
                                
                  <span>
                    Label
                  </span>
                  
                                
                  <span>
                    Text
                  </span>
                  
                            
                </div>
                
                            
              </div>
              
                            
              <div
                class="fd-card__content-group"
              >
                
                            
                <div
                  class="fd-card__content-group-text"
                >
                  
                                
                  <span>
                    Label
                  </span>
                  
                                
                  <span>
                    Text
                  </span>
                  
                            
                </div>
                
                            
              </div>
              
                            
              <div
                class="fd-card__content-group"
              >
                
                            
                <div
                  class="fd-card__content-group-text"
                >
                  
                                
                  <span>
                    Label Only
                  </span>
                  
                            
                </div>
                
                            
              </div>
              
                        
            </div>
            
                        
          </div>
          
                    
        </div>
        
                
      </div>
      
                
      <div
        class="fd-resizable-card-layout__icon-wrapper"
      >
        
                    
        <div
          class="fd-resizable-card-layout__icon"
        />
        
                
      </div>
      
            
    </div>
    
            
    <div
      class="fd-resizable-card-layout__resize--horizontal"
    />
    
        
  </div>
  

        
  <div
    class="fd-resizable-card-layout__item card-five-dimensions"
    id="five"
  >
    
            
    <div
      class="fd-resizable-card-layout__resize--vertical"
    />
    
            
    <div
      class="fd-resizable-card-layout__card"
    >
      
                
      <div
        aria-label="Table Card Example 1"
        class="fd-card fd-card--table"
        role="region"
      >
        
                    
        <a
          class="fd-card__header"
          tabindex="0"
        >
          
                        
          <div
            class="fd-card__header-text"
          >
            
                        
            <div
              class="fd-card__title-area"
            >
              
                            
              <div
                class="fd-card__title"
              >
                Table Card
              </div>
              
                            
              <span
                class="fd-object-status fd-card__counter"
              >
                4 of 20
              </span>
              
                        
            </div>
            
                        
          </div>
          
                    
        </a>
        
                    
        <div
          aria-label="Card Content"
          class="fd-card__content"
          role="group"
        >
          
                        
          <table
            class="fd-table fd-table--no-horizontal-borders fd-table--no-vertical-borders"
          >
            
                        
            <thead
              class="fd-table__header"
            >
              
                            
              <tr
                class="fd-table__row"
              >
                
                            
                <th
                  class="fd-table__cell fd-table__cell--checkbox"
                >
                  
                                
                  <input
                    aria-label="checkbox"
                    class="fd-checkbox"
                    id="kqqzPI"
                    type="checkbox"
                  />
                  
                                
                  <label
                    class="fd-checkbox__label"
                    for="kqqzPI"
                  />
                  
                            
                </th>
                
                            
                <th
                  class="fd-table__cell"
                  scope="col"
                >
                  Name
                </th>
                
                            
                <th
                  class="fd-table__cell"
                  scope="col"
                >
                  Status
                </th>
                
                            
                <th
                  class="fd-table__cell"
                  scope="col"
                >
                  Price
                </th>
                
                            
                <th
                  class="fd-table__cell"
                />
                
                            
              </tr>
              
                        
            </thead>
            
                        
            <tbody
              class="fd-table__body"
            >
              
                            
              <tr
                class="fd-table__row"
              >
                
                            
                <td
                  class="fd-table__cell fd-table__cell--checkbox"
                >
                  
                                
                  <input
                    aria-label="checkbox"
                    class="fd-checkbox"
                    id="EWuzWh"
                    type="checkbox"
                  />
                  
                                
                  <label
                    class="fd-checkbox__label"
                    for="EWuzWh"
                  />
                  
                            
                </td>
                
                            
                <td
                  class="fd-table__cell"
                >
                  Banana
                </td>
                
                            
                <td
                  class="fd-table__cell"
                >
                  
                                
                  <span
                    class="fd-object-status fd-object-status--positive"
                  >
                    
                                                    Available
                                                
                  </span>
                  
                            
                </td>
                
                            
                <td
                  class="fd-table__cell"
                >
                  5 EUR
                </td>
                
                            
                <td
                  class="fd-table__cell fd-table__cell--fit-content fd-table__cell--no-padding"
                >
                  
                                
                  <i
                    class="fd-table__icon fd-table__icon--navigation sap-icon--navigation-right-arrow"
                    role="presentation"
                  />
                  
                            
                </td>
                
                            
              </tr>
              
                            
              <tr
                class="fd-table__row"
              >
                
                            
                <td
                  class="fd-table__cell fd-table__cell--checkbox"
                >
                  
                                
                  <input
                    aria-label="checkbox"
                    class="fd-checkbox"
                    id="19j0Sc"
                    type="checkbox"
                  />
                  
                                
                  <label
                    class="fd-checkbox__label"
                    for="19j0Sc"
                  />
                  
                            
                </td>
                
                            
                <td
                  class="fd-table__cell"
                >
                  Pineapple
                </td>
                
                            
                <td
                  class="fd-table__cell"
                >
                  
                                
                  <span
                    class="fd-object-status fd-object-status--negative"
                  >
                    
                                                    Out of stock
                                                
                  </span>
                  
                            
                </td>
                
                            
                <td
                  class="fd-table__cell"
                >
                  2 EUR
                </td>
                
                            
                <td
                  class="fd-table__cell fd-table__cell--fit-content fd-table__cell--no-padding"
                >
                  
                                
                  <i
                    class="fd-table__icon fd-table__icon--navigation sap-icon--navigation-right-arrow"
                    role="presentation"
                  />
                  
                            
                </td>
                
                            
              </tr>
              
                            
              <tr
                class="fd-table__row"
              >
                
                            
                <td
                  class="fd-table__cell fd-table__cell--checkbox"
                >
                  
                                
                  <input
                    aria-label="checkbox"
                    class="fd-checkbox"
                    id="a7SfGX"
                    type="checkbox"
                  />
                  
                                
                  <label
                    class="fd-checkbox__label"
                    for="a7SfGX"
                  />
                  
                            
                </td>
                
                            
                <td
                  class="fd-table__cell"
                >
                  Orange
                </td>
                
                            
                <td
                  class="fd-table__cell"
                >
                  
                                
                  <span
                    class="fd-object-status fd-object-status--informative"
                  >
                    
                                                    Temporary unavailable
                                                
                  </span>
                  
                            
                </td>
                
                            
                <td
                  class="fd-table__cell"
                >
                  6 EUR
                </td>
                
                            
                <td
                  class="fd-table__cell fd-table__cell--fit-content fd-table__cell--no-padding"
                >
                  
                                
                  <i
                    class="fd-table__icon fd-table__icon--navigation sap-icon--navigation-right-arrow"
                    role="presentation"
                  />
                  
                            
                </td>
                
                            
              </tr>
              
                        
            </tbody>
            
                        
          </table>
          
                    
        </div>
        
                
      </div>
      
                
      <div
        class="fd-resizable-card-layout__icon-wrapper"
      >
        
                    
        <div
          class="fd-resizable-card-layout__icon"
        />
        
                
      </div>
      
            
    </div>
    
            
    <div
      class="fd-resizable-card-layout__resize--horizontal"
    />
    
        
  </div>
  
    
</div>
`;
